# IntelliQuery-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  build_db.py  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  take_screenshot.py
.github/workflows/: ci.yml
data/: .gitkeep
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
intelliquery/: __init__.py  config.py
intelliquery/agents/: __init__.py  graph.py  nodes.py  state.py
intelliquery/chains/: __init__.py  anonymizer.py  distiller.py  planner.py  reasoner.py  verifier.py
intelliquery/evaluation/: __init__.py  metrics.py
intelliquery/processing/: __init__.py  pdf_loader.py  summarizer.py  text_cleaner.py
intelliquery/prompts/: __init__.py  anonymize.py  distill.py  plan.py  reason.py  verify.py
intelliquery/providers/: __init__.py  base.py  openai_provider.py
intelliquery/retrievers/: __init__.py  multi_retriever.py  vector_store.py
notebooks/: intelliquery_tutorial.ipynb
tests/: __init__.py  test_anonymizer.py  test_graph.py  test_pdf_loader.py  test_text_cleaner.py
ui/: __init__.py  api.py  app.py  components.py
