[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelliquery-rag"
version = "0.1.0"
description = "Intelligent graph-orchestrated RAG agent for complex multi-step question answering"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "jay14"}
]
keywords = ["rag", "llm", "langgraph", "faiss", "question-answering", "retrieval-augmented-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "langgraph>=0.1.0",
    "langsmith>=0.1.0",
    "faiss-cpu>=1.7.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "gradio>=4.20.0",
    "ragas>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
groq = [
    "langchain-groq>=0.1.0",
]
anthropic = [
    "langchain-anthropic>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Jay14090/IntelliQuery-RAG"
Repository = "https://github.com/Jay14090/IntelliQuery-RAG"
Issues = "https://github.com/Jay14090/IntelliQuery-RAG/issues"

[project.scripts]
intelliquery = "ui.app:main"

[tool.setuptools.packages.find]
include = ["intelliquery*", "ui*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
